2002-10-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: remove intl as a subdir
	* configure.in: remove the evil AM_GNU_GETTEXT call, no need for
	intl/
	* intl/*: removed

2002-10-28  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: removed m4/ added intl/
	* autogen.sh: use a gnome2 one
	* configure.in: updated to gnome2

2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* AUTHORS: added a random list of people who should be creditted.
	Probably missing many.
	* NEWS: added 0.5.0 items.

2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* src/commands.c (about_command): rename documentors to documenters.
	Add translator credits. Assign the gtetrinet icon to the about dialog.
	Add a hyperlink to GTetrinet's homepage.
	* src/gtetrinet.c (main): set bind_textdomain_codeset to "UTF-8".
	Remove useless setlocale call.

	* configure.in: bump version to 0.5.0pre1.

2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* Finally, GNOME2!

	* configure.in: require GTK 2.0.0 and various GNOME2 libs.
	* src/Makefile.am: new GNOME2 includes.
	* src/client.c, src/client.h, src/commands.c, src/dialogs.c,
	src/fields.c, src/fields.h, src/gtetrinet.c, src/misc.c, src/misc.h,
	src/partyline.c, src/tetrinet.c, src/tetrinet.h: initial port to
	GNOME2 by James Antill.

2002-10-28  Jordi Mallach  <jordi@sindominio.net>

	* src/config.c (config_loadconfig): patch from James Antill. Save
	and restore the server, as well as the server history.

2002-10-27  Jordi Mallach  <jordi@sindominio.net>

	* NEWS, configure.in: released gtetrinet 0.4.4.

2002-10-22  James Antill  <james@and.org>

	* src/tetrinet.c (tetrinet_inmessage): Check all values from atoi()
	for out of bounds.
	(tetrinet_inmessage): Check all int values from sscanf() for out of
	bounds.
	(tetrinet_inmessage): Stop buffer overflows in sscanf() %s.
	(tetrinet_inmessage): Protect playercount from overflow.
	(speclist_add): Protect spectatorcount from overflow.

2002-10-21  James Antill  <james@and.org>
