@@ -8,10 +8,9 @@ utildir = $(datadir)/gnome/apps/Games
 
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = ABOUT-NLS AUTHORS COPYING ChangeLog INSTALL NEWS README \
-	     config.guess config.sub config.rpath install-sh missing \
-	     mkinstalldirs $(icon_DATA) $(util_DATA)
-
+EXTRA_DIST = ABOUT-NLS AUTHORS COPYING ChangeLog INSTALL NEWS README	\
+	     TODO config.guess config.sub config.rpath install-sh	\
+	     missing mkinstalldirs $(icon_DATA) $(util_DATA)
 
 changelog:
 	cvs2cl -b --utc -S --no-wrap -f ChangeLog.CVS
